fixed win game bug, timer now resets on next round, played cards now align more properly

--- a/src/components/PlayedCards/PlayedCards.css
+++ b/src/components/PlayedCards/PlayedCards.css
@@ -1,5 +1,6 @@
 div.cardGroup{
 	border:2px solid transparent;
+	display:inline-block;
 }
 
 div.cardGroup:hover{
